# pygame_utils

./: .gitignore  setup.cfg
src/pygame_utils/game/: window.py
src/pygame_utils/graphics/: component.py  renderer.py
src/pygame_utils/graphics/ui/: animatedcolor.py  blur.py  button.py  dropshadoweffect.py  effect.py  entry.py  label.py  widget.py
src/pygame_utils/scene/: scene.py  scenemanager.py
src/pygame_utils/sprite/: gamecomponent.py  group.py
