[metadata]
name = pygame_utils
version = 0.0.1
author = MarronEyes
author_email = marounyeux@gmail.com
description = A simple python library that provides utilities for pygame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarronEyes/pygame_utils
project_urls =
    Bug Tracker = https://github.com/MarronEyes/pygame_utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src